--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Bienvenidos renacuajos!</h1>
+    <h2>No toquen nadaaa...</h2>
 </body>
 </html>
