--- a/ProyectoIntegrador_PinatJuanMatias/src/index.html
+++ b/ProyectoIntegrador_PinatJuanMatias/src/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>ProyectoIntegradorPinatJuanMatias</title>
@@ -9,9 +9,6 @@
 </head>
 <body>
   <h1>Bienvenidos!</h1>
-  <h2>SMUFEFER!!!</h2>
-  <h3>Jajajaj</h3>
-  <h4>Que onde</h4>
   <app-root></app-root>
 </body>
 </html>
