--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <title></title>
 </head>
 <body>
-    <h1>Hola</h1>
-    <h2>Como estamos</h2>
+    <main>
+        <div class="icon">
+            <svg height="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none"></circle>
+            </svg>
+            <i class="bx bxl-instragram"></i>
+        </div>
+        <div class="icon">
+            <svg height="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none"></circle>
+            </svg>
+            <i class="bx bxl-instragram"></i>
+        </div>
+        <div class="icon">
+            <svg height="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none"></circle>
+            </svg>
+            <i class="bx bxl-instragram"></i>
+        </div>
+        <div class="icon">
+            <svg height="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none"></circle>
+            </svg>
+            <i class="bx bxl-instragram"></i>
+        </div>
+    </main>
 </body>
 </html>
